# Backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260623_0001_initial_schema.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/routes/: analytics.py  auth.py  channels.py  conversations.py  knowledge.py  ml.py  settings.py  users.py
app/core/: config.py  logging.py  secrets.py  security.py
app/db/: base.py  seed.py  session.py
app/models/: __init__.py  channel.py  conversation.py  knowledge.py  ops.py  tenant.py  user.py
app/schemas/: auth.py  channels.py  conversations.py  knowledge.py  ml.py
app/services/: auth.py  confidence.py  conversations.py  knowledge.py
app/services/channels/: avito.py  base.py  max.py  telegram.py  vk.py  web.py
app/services/ml/: README.md  __init__.py  contracts.py  memory.py  prompts.py  service.py
app/services/rag/: embeddings.py  llm.py  pipeline.py
app/workers/: worker.py
docs/: api-page-map.md  demo-data.md  knowledge-api.md
tests/: test_auth_api.py  test_channels_telegram.py  test_conversations_api.py  test_health.py  test_knowledge_api.py  test_ml_api.py  test_ml_service.py  test_seed_data.py
