[project]
name = "ai-manager-backend"
version = "0.1.0"
description = "AI-сотрудник в едином окне — backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "gunicorn>=23",
    "pydantic>=2.9",
    "email-validator>=2.2",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "arq>=0.26",
    "httpx>=0.28",
    "qdrant-client>=1.12",
    "pyjwt>=2.10",
    "argon2-cffi>=23",
    "python-multipart>=0.0.12",
    "structlog>=24.4",
    "aioboto3>=13",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
